--- a/ConceptoCapasMicroServicio/POC.Gestor/Gestor.RestAPI/Gestor.RestAPI.csproj
+++ b/ConceptoCapasMicroServicio/POC.Gestor/Gestor.RestAPI/Gestor.RestAPI.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="AutoMapper" Version="7.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Examples" Version="2.9.0" />
   </ItemGroup>
 
   <ItemGroup>
